--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-pandas
-
-numpy
-
-matplotlib
-
-seaborn
-
-scikit-learn
-
-imbalanced-learn
+pandas>=1.3.0
+numpy>=1.21.0
+matplotlib>=3.4.2
+seaborn>=0.11.1
+scikit-learn>=1.0.0
+imbalanced-learn>=0.8.0
